feat(crops): added all queries and repositories related to diseases